// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/BasicDatePicker render diff size date picker 1`] = `
<div>
  <div
    class="basic-date-picker-wrapper css-1ockfja"
  >
    <svg
      class="prefix-icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="11"
      />
      <circle
        cx="12"
        cy="12"
        r="10"
        stroke="#fff"
        stroke-width="2"
      />
      <path
        d="M12 7.5V12h3.5"
        stroke="#fff"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="ant-picker ant-picker-large css-dev-only-do-not-override-1xo6ltj"
    >
      <div
        class="ant-picker-input"
      >
        <input
          autocomplete="off"
          placeholder="Select date"
          readonly=""
          size="12"
          title=""
          value=""
        />
        <span
          class="ant-picker-suffix"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
              fill="#C3C6CD"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/BasicDatePicker render diff size date picker 2`] = `
<div>
  <div
    class="basic-date-picker-wrapper css-1ockfja"
  >
    <svg
      class="prefix-icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="11"
      />
      <circle
        cx="12"
        cy="12"
        r="10"
        stroke="#fff"
        stroke-width="2"
      />
      <path
        d="M12 7.5V12h3.5"
        stroke="#fff"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="ant-picker ant-picker-small css-dev-only-do-not-override-1xo6ltj"
    >
      <div
        class="ant-picker-input"
      >
        <input
          autocomplete="off"
          placeholder="Select date"
          readonly=""
          size="12"
          title=""
          value=""
        />
        <span
          class="ant-picker-suffix"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
              fill="#C3C6CD"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/BasicDatePicker render diff size date picker 3`] = `
<div>
  <div
    class="basic-date-picker-wrapper css-1ockfja"
  >
    <svg
      class="prefix-icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="11"
      />
      <circle
        cx="12"
        cy="12"
        r="10"
        stroke="#fff"
        stroke-width="2"
      />
      <path
        d="M12 7.5V12h3.5"
        stroke="#fff"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="ant-picker ant-picker-middle css-dev-only-do-not-override-1xo6ltj"
    >
      <div
        class="ant-picker-input"
      >
        <input
          autocomplete="off"
          placeholder="Select date"
          readonly=""
          size="12"
          title=""
          value=""
        />
        <span
          class="ant-picker-suffix"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
              fill="#C3C6CD"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/BasicDatePicker render open date picker when hideSuperIcon false 1`] = `
<div>
  <div
    class="basic-date-picker-wrapper css-7anblu"
  >
    <svg
      class="prefix-icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="11"
      />
      <circle
        cx="12"
        cy="12"
        r="10"
        stroke="#fff"
        stroke-width="2"
      />
      <path
        d="M12 7.5V12h3.5"
        stroke="#fff"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="ant-picker ant-picker-middle css-dev-only-do-not-override-1xo6ltj"
    >
      <div
        class="ant-picker-input"
      >
        <input
          autocomplete="off"
          placeholder="Select date"
          size="12"
          title=""
          value=""
        />
        <span
          class="ant-picker-suffix"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 7.219-3.3 3.3-.942-.943L8 5.333l4.243 4.243-.943.943z"
              fill="#C3C6CD"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-picker-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up css-dev-only-do-not-override-1xo6ltj ant-picker-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-picker-panel-container"
      >
        <div
          class="ant-picker-panel-layout"
        >
          <div
            class="ant-picker-panel"
            tabindex="-1"
          >
            <div
              class="ant-picker-date-panel"
            >
              <div
                class="ant-picker-header"
              >
                <button
                  class="ant-picker-header-super-prev-btn"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="ant-picker-super-prev-icon"
                  />
                </button>
                <button
                  class="ant-picker-header-prev-btn"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="prev-icon"
                  >
                    <svg
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m6.316 7 2.888 2.888-.825.824L4.667 7l3.712-3.712.825.825z"
                        fill="#292C33"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  class="ant-picker-header-view"
                >
                  <button
                    class="ant-picker-month-btn"
                    tabindex="-1"
                    type="button"
                  >
                    Dec
                  </button>
                  <button
                    class="ant-picker-year-btn"
                    tabindex="-1"
                    type="button"
                  >
                    2023
                  </button>
                </div>
                <button
                  class="ant-picker-header-next-btn"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="next-icon"
                  >
                    <svg
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  class="ant-picker-header-super-next-btn"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="ant-picker-super-next-icon"
                  />
                </button>
              </div>
              <div
                class="ant-picker-body"
              >
                <table
                  class="ant-picker-content"
                >
                  <thead>
                    <tr>
                      <th>
                        Su
                      </th>
                      <th>
                        Mo
                      </th>
                      <th>
                        Tu
                      </th>
                      <th>
                        We
                      </th>
                      <th>
                        Th
                      </th>
                      <th>
                        Fr
                      </th>
                      <th>
                        Sa
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="ant-picker-cell"
                        title="2023-11-26"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          26
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2023-11-27"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          27
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2023-11-28"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          28
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2023-11-29"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          29
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-end"
                        title="2023-11-30"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          30
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-start ant-picker-cell-in-view"
                        title="2023-12-01"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          1
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-02"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          2
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-03"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          3
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view ant-picker-cell-today"
                        title="2023-12-04"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          4
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-05"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          5
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-06"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          6
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-07"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          7
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-08"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          8
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-09"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          9
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-10"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          10
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-11"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          11
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-12"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          12
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-13"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          13
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-14"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          14
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-15"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          15
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-16"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          16
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-17"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          17
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-18"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          18
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-19"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          19
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-20"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          20
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-21"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          21
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-22"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          22
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-23"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          23
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-24"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          24
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-25"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          25
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-26"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          26
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-27"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          27
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-28"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          28
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-29"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          29
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-30"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          30
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="ant-picker-cell ant-picker-cell-end ant-picker-cell-in-view"
                        title="2023-12-31"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          31
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-start"
                        title="2024-01-01"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          1
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2024-01-02"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          2
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2024-01-03"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          3
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2024-01-04"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          4
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2024-01-05"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          5
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2024-01-06"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          6
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
            <div
              class="ant-picker-footer"
            >
              <a
                class="ant-picker-today-btn"
              >
                Today
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/BasicDatePicker render open date picker when hideSuperIcon true 1`] = `
<div>
  <div
    class="basic-date-picker-wrapper css-1ockfja"
  >
    <svg
      class="prefix-icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="11"
      />
      <circle
        cx="12"
        cy="12"
        r="10"
        stroke="#fff"
        stroke-width="2"
      />
      <path
        d="M12 7.5V12h3.5"
        stroke="#fff"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="ant-picker ant-picker-middle css-dev-only-do-not-override-1xo6ltj"
    >
      <div
        class="ant-picker-input"
      >
        <input
          autocomplete="off"
          placeholder="Select date"
          size="12"
          title=""
          value=""
        />
        <span
          class="ant-picker-suffix"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 7.219-3.3 3.3-.942-.943L8 5.333l4.243 4.243-.943.943z"
              fill="#C3C6CD"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-picker-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up css-dev-only-do-not-override-1xo6ltj ant-picker-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-picker-panel-container"
      >
        <div
          class="ant-picker-panel-layout"
        >
          <div
            class="ant-picker-panel"
            tabindex="-1"
          >
            <div
              class="ant-picker-date-panel"
            >
              <div
                class="ant-picker-header"
              >
                <button
                  class="ant-picker-header-super-prev-btn"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="ant-picker-super-prev-icon"
                  />
                </button>
                <button
                  class="ant-picker-header-prev-btn"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="prev-icon"
                  >
                    <svg
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m6.316 7 2.888 2.888-.825.824L4.667 7l3.712-3.712.825.825z"
                        fill="#292C33"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  class="ant-picker-header-view"
                >
                  <button
                    class="ant-picker-month-btn"
                    tabindex="-1"
                    type="button"
                  >
                    Dec
                  </button>
                  <button
                    class="ant-picker-year-btn"
                    tabindex="-1"
                    type="button"
                  >
                    2023
                  </button>
                </div>
                <button
                  class="ant-picker-header-next-btn"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="next-icon"
                  >
                    <svg
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  class="ant-picker-header-super-next-btn"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="ant-picker-super-next-icon"
                  />
                </button>
              </div>
              <div
                class="ant-picker-body"
              >
                <table
                  class="ant-picker-content"
                >
                  <thead>
                    <tr>
                      <th>
                        Su
                      </th>
                      <th>
                        Mo
                      </th>
                      <th>
                        Tu
                      </th>
                      <th>
                        We
                      </th>
                      <th>
                        Th
                      </th>
                      <th>
                        Fr
                      </th>
                      <th>
                        Sa
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="ant-picker-cell"
                        title="2023-11-26"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          26
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2023-11-27"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          27
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2023-11-28"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          28
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2023-11-29"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          29
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-end"
                        title="2023-11-30"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          30
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-start ant-picker-cell-in-view"
                        title="2023-12-01"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          1
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-02"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          2
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-03"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          3
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view ant-picker-cell-today"
                        title="2023-12-04"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          4
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-05"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          5
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-06"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          6
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-07"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          7
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-08"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          8
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-09"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          9
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-10"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          10
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-11"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          11
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-12"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          12
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-13"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          13
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-14"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          14
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-15"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          15
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-16"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          16
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-17"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          17
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-18"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          18
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-19"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          19
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-20"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          20
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-21"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          21
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-22"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          22
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-23"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          23
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-24"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          24
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-25"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          25
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-26"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          26
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-27"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          27
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-28"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          28
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-29"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          29
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-in-view"
                        title="2023-12-30"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          30
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="ant-picker-cell ant-picker-cell-end ant-picker-cell-in-view"
                        title="2023-12-31"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          31
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell ant-picker-cell-start"
                        title="2024-01-01"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          1
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2024-01-02"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          2
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2024-01-03"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          3
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2024-01-04"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          4
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2024-01-05"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          5
                        </div>
                      </td>
                      <td
                        class="ant-picker-cell"
                        title="2024-01-06"
                      >
                        <div
                          class="ant-picker-cell-inner"
                        >
                          6
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
            <div
              class="ant-picker-footer"
            >
              <a
                class="ant-picker-today-btn"
              >
                Today
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/BasicDatePicker render params hideSuperIcon val 1`] = `
<div>
  <div
    class="basic-date-picker-wrapper css-7anblu"
  >
    <svg
      class="prefix-icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="11"
      />
      <circle
        cx="12"
        cy="12"
        r="10"
        stroke="#fff"
        stroke-width="2"
      />
      <path
        d="M12 7.5V12h3.5"
        stroke="#fff"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="ant-picker css-dev-only-do-not-override-1xo6ltj"
    >
      <div
        class="ant-picker-input"
      >
        <input
          autocomplete="off"
          placeholder="Select date"
          readonly=""
          size="12"
          title=""
          value=""
        />
        <span
          class="ant-picker-suffix"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
              fill="#C3C6CD"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
